Update infrastructure package.
Split the Reader to separate packages. Add the update package to update a match